# WorldRanks

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  input.css  package-lock.json
.github/workflows/: dioxus.yml
assets/: tailwind.css
src/: main.rs
src/components/: country_details.rs  country_list.rs  mod.rs  wrapper.rs
src/types/: cca3.rs  countries_api.rs  filters.rs  mod.rs
