[package]
name = "world-ranks"
version = "0.1.0"
authors = ["jcomer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
gloo-net = "0.6.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thousands = "0.2.0"
web-sys = "0.3.77"
wee_alloc = "0.4.5"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
